fix: align the grid of each card by another way

--- a/style.css
+++ b/style.css
@@ -56,21 +56,25 @@ body {
 }
 
 .supervisor {
+  /* grid-area: 1/1/5/2; */
   grid-area: 1/1/5/2;
   border-top: 4px solid hsl(180, 62%, 55%);
 }
 
 .team-builder {
-  grid-area: 1/2/3/3;
+  /* grid-area: 1/2/3/3; */
+  grid-area: 1/2/3/4;
   border-top: 4px solid hsl(0, 78%, 62%);
 }
 
 .karma {
-  grid-area: 3/2/5/3;
+  /* grid-area: 3/2/5/3; */
+  grid-area: 3/2/5/4;
   border-top: 4px solid hsl(34, 97%, 64%);
 }
 
 .calculator {
+  /* grid-area: 1/3/5/4; */
   grid-area: 1/3/5/4;
   border-top: 4px solid hsl(212, 86%, 64%);
 }
